<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bim</groupId>
    <artifactId>bim-compiler-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>BIM Compiler Parent</name>
    <description>Deterministic 2D-to-BIM Compiler — Multi-Module Reactor</description>

    <modules>
        <module>orm-core</module>
        <module>ORMSandbox</module>
        <module>DAGCompiler</module>
        <module>2D_Layout</module>
        <module>TopologyMaker</module>
        <module>BIM_COBOL</module>
        <module>IFCtoBOM</module>
        <module>BIMBackOffice</module>
        <module>BIMEyes</module>
        <module>BonsaiBIMDesigner</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sqlite.version>3.45.1.0</sqlite.version>
        <gson.version>2.10.1</gson.version>
        <junit.version>5.10.1</junit.version>
        <choco.version>4.10.14</choco.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <poi.version>5.2.5</poi.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>dag-compiler</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>orm-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>orm-sandbox</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>bim-eyes</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>bim-cobol</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>ifc-to-bom</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>bim-backoffice</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.bim</groupId>
                <artifactId>bonsai-bim-designer</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- SQLite JDBC Driver -->
            <dependency>
                <groupId>org.xerial</groupId>
                <artifactId>sqlite-jdbc</artifactId>
                <version>${sqlite.version}</version>
            </dependency>

            <!-- Gson for JSON serialization -->
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>

            <!-- JUnit 5 for testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Choco Solver for constraint satisfaction (Space Solver)
                 DETERMINISM WARNING: Choco's default search strategy is version-dependent.
                 Do not bump version without re-verifying all witness outputs.
                 SpaceSolver.java pins search strategy explicitly for reproducibility. -->
            <dependency>
                <groupId>org.choco-solver</groupId>
                <artifactId>choco-solver</artifactId>
                <version>${choco.version}</version>
            </dependency>

            <!-- SnakeYAML for configuration loading (Phase 29) -->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>

            <!-- Apache POI — Excel XLSX report generation (Phase H0) -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>

            <!-- ArchUnit — architecture enforcement rules (BOM Watchdog Gate) -->
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>1.2.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
